# reactos

branches/GSoC_2011/GSoC_Themes/tools/wpp/: CMakeLists.txt
branches/GSoC_2011/ThemesSupport/tools/spec2def/: spec2def.c
branches/arty-newcc/tools/rbuild/: rbuild.vcproj
branches/arty-newcc/tools/rbuild/backend/dependencymap/: dependencymap.cpp
branches/arty-newcc/tools/rbuild/backend/mingw/: mingw.cpp
branches/arty-newcc/tools/rbuild/backend/msbuild/: msbuild.cpp
branches/arty-newcc/tools/rbuild/backend/versionreport/: versionreport.cpp
branches/clipboard/tools/nci/: w32ksvc.db
branches/cmake-bringup/tools/: CMakeLists.txt  getdate.cmd  xml.cpp
branches/cmake-bringup/tools/buildno/: CMakeLists.txt  buildno.cpp
branches/cmake-bringup/tools/cabman/: cabinet.h
branches/cmake-bringup/tools/gendib/: CMakeLists.txt
branches/cmake-bringup/tools/geninc/: geninc.c
branches/cmake-bringup/tools/mkhive/: CMakeLists.txt
branches/cmake-bringup/tools/nci/: CMakeLists.txt  ncitool.c
branches/cmake-bringup/tools/rsym/: CMakeLists.txt
branches/cmake-bringup/tools/spec2def/: spec2def.c
branches/cmake-bringup/tools/spec2pdef/: CMakeLists.txt  spec2pdef.c
branches/cmake-bringup/tools/unicode/: CMakeLists.txt  string.c
branches/cmake-bringup/tools/unicode/wine/: unicode.h
branches/cmake-bringup/tools/widl/: CMakeLists.txt
branches/cmake-bringup/tools/winebuild/: CMakeLists.txt  getpid.c
branches/cmake-bringup/tools/winebuild/include/sys/: stat.h
branches/cmake-bringup/tools/wmc/: CMakeLists.txt
branches/cmake-bringup/tools/wpp/: CMakeLists.txt
branches/cmake-bringup/tools/wrc/: CMakeLists.txt
branches/expat-rbuild/tools/: ssprintf.cpp  tools.mak  xml.cpp  xmlstorage.cpp  xmlstorage.h
branches/expat-rbuild/tools/buildno/: buildno.cpp  buildno.mak
branches/expat-rbuild/tools/expat/: expat_config.h
branches/expat-rbuild/tools/rbuild/: define.cpp  global.cpp  include.cpp  installfile.cpp  linkerscript.cpp  module.cpp  pch.h  project.cpp  rbuild.cpp  rbuild.dsp  rbuild.vcproj  syssetupgenerator.cpp  test.h  testsupportcode.cpp
branches/expat-rbuild/tools/rbuild/backend/devcpp/: devcpp.h
branches/expat-rbuild/tools/rbuild/backend/mingw/: mingw.cpp  modulehandler.cpp  proxymakefile.cpp
branches/expat-rbuild/tools/rbuild/backend/msvc/: genguid.cpp  msvc.h
branches/expat-rbuild/tools/rbuild/tests/data/: automaticdependency.rbuild  compilationunit.rbuild  module.rbuild  project.rbuild  symbol.rbuild
branches/jcatena-branch/tools/msc/: nasm.rules  s_as_mscpp.rules
branches/old_reactx/reactos/dll/cpl/input/: changekeyseq.c
branches/olpc/tools/rbuild/backend/mingw/: modulehandler.cpp
branches/pierre-fsd/tools/cabman/: cabinet.cxx
branches/pierre-fsd/tools/rbuild/: module.cpp  project.cpp  rbuild.h  testsupportcode.cpp
branches/pierre-fsd/tools/winebuild/: build.h  parser.c  spec32.c
branches/reactos-yarotows/tools/gendib/: gendib.c
branches/reactx/irc/TechBot/TechBot.Console/: TechBot.Console.csproj
branches/ros-amd64-bringup/rosapps/applications/write/: rsrc.rc
branches/ros-branch-0_1_5/reactos/lib/wsock32/: Makefile
branches/ros-branch-0_3_5/irc/TechBot/TechBot.Library/: app.config
branches/ros-branch-0_3_7/rosapps/applications/write/: rsrc.rc
branches/ros-csrss/tools/wpp/: preproc.c
branches/the-real-msvc/tools/rbuild/: module.cpp
branches/the-real-msvc/tools/widl/: client.c
branches/usb-bringup/tools/mkhive/: CMakeLists.txt
branches/win32k-gdi-dx/branches/expat-rbuild/tools/: xml.h
branches/win32k-gdi-dx/tags/ReactOS-0.0.21/reactos/: .cvsignore
branches/win32k-gdi-dx/trunk/rosapps/write/: rsrc.rc
lwIP-tcpip/sdk/lib/drivers/: CMakeLists.txt
reactos/dll/win32/shell32/: shfldr_desktop.c
reactos/subsys/system/usetup/: drivesup.h
rostests/winetests/rsaenh/: rsaenh.rbuild
tags/ReactOS-0.0.14/reactos/ntoskrnl/mm/: cont.c
tags/ReactOS-0.0.18/reactos/lib/ntdll/rtl/: error.c
tags/ReactOS-0.0.19/reactos/iface/native/: genntdll.c
tags/ReactOS-0.1.5/rosapps/taskmgr/: graph.h
tags/ReactOS-0.2.0/freeldr/tools/: Makefile
tags/ReactOS-0.2.4/reactos/lib/mpr/: mpr.rc
tags/ReactOS-0.2.7/rosapps/winfile/: draw.c
tags/ReactOS-0.3.4/rosapps/write/: rsrc.rc
tags/ReactOS-0.3.5/irc/TechBot/TechBot.Library/: Settings.Designer.cs  Settings.settings
tags/ReactOS-0.3.7/rosapps/applications/write/: rsrc.rc
tags/RosBE-Windows-0.3.8/tools/RosBE-Windows/Root/: Build-Shared.cmd
tags/RosBE-Windows-1.0.0/reactos/ntoskrnl/: ntoskrnl.rbuild
tags/ss199910/reactos/lib/psxdll/: psxdll.def
tags/ss200004/reactos/ntoskrnl/fs/: name.c
tags/ss200007/reactos/ntoskrnl/ex/: fmutex.c
tags/ss200007/reactos/ntoskrnl/fs/: oplock.c
tags/ss200106/reactos/include/ole32/: basetyps.h
tags/ss200106/reactos/lib/ws2_32/: makefile
tags/ss200207/rosapps/winfile/: listview.h
tags/ss200210/rosapps/winfile/: framewnd.h
tags/ss200306/rosapps/winfile/: run.h
(+73 files in other folders)
