add_library(xml xml.cpp)

add_executable(bin2c bin2c.c)
#add_executable(pefixup pefixup.c)

add_subdirectory(buildno)
add_subdirectory(cabman)
add_subdirectory(cdmake)
add_subdirectory(gendib)
add_subdirectory(mkhive)
add_subdirectory(nci)
add_subdirectory(unicode)
add_subdirectory(winebuild)
if(NOT MSVC)
#add_subdirectory(rsym)
add_subdirectory(wpp)
#add_subdirectory(wmc)
add_subdirectory(widl)
#add_subdirectory(wrc)
#add_subdirectory(log2lines)
endif()

